<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen"
    android:paddingLeft="16dp"
    android:paddingTop="54dp"
    android:paddingRight="16dp"
    android:paddingBottom="24dp"
    tools:context=".ui.onboarding.OnboardingActivity">

    <ImageView
        android:id="@+id/iv_ilustration_onboarding"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:src="@drawable/diary_reader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_caption_onboarding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/caption_onboarding"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_ilustration_onboarding" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_primary_background"
        android:elevation="0dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/masuk"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/btn_register" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_secondary_background"
        android:elevation="0dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/daftar"
        android:textAllCaps="false"
        android:textColor="@color/lightYellow"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>