<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen"
    tools:context=".ui.addStoryScreen.AddStoryActivity">

    <ProgressBar
        android:id="@+id/pb_add_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/lightYellow"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/til_story"
        app:layout_constraintEnd_toStartOf="@id/btn_galeri"
        app:layout_constraintStart_toEndOf="@id/btn_kamera"
        app:layout_constraintTop_toBottomOf="@id/iv_add_story" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/back_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/iv_add_story"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="13dp"
        android:contentDescription="@string/galeri"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/btn_kamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:srcCompat="@drawable/ic_place_holder" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_kamera"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_primary_background"
        android:text="@string/kamera"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_add_story" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_galeri"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/button_primary_background"
        android:text="@string/galeri"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_add_story" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_story"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_galeri">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/masukkan_cerita_anda"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/button_secondary_background"
        android:text="@string/upload"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_story" />


</androidx.constraintlayout.widget.ConstraintLayout>